--- a/spinning-reel/src/detail_accomodation.html
+++ b/spinning-reel/src/detail_accomodation.html
@@ -137,21 +137,21 @@ font-size: inherit;
                   </div>
                 </div>
                 <nav role="navigation" class="navbar_menu w-nav-menu">
-                  <a href="#" class="navbar_logo-link-menu w-nav-brand"><img src="images/company-logo.svg" loading="lazy" alt=""></a>
-                  <a href="accommodation.html" class="navbar_link w-nav-link">Accommodation</a>
-                  <a href="contact.html" class="navbar_link w-nav-link">Contact</a>
-                  <a href="#" class="navbar_tablet-menu-button w-button">Button</a>
+                  <a routerLink="/home" class="navbar_logo-link-menu w-nav-brand"><img src="images/company-logo.svg" loading="lazy" alt=""></a>
+                  <a routerLink="/accommodation" class="navbar_link w-nav-link">Accommodation</a>
+                  <a routerLink="/contact" class="navbar_link w-nav-link">Contact</a>
+                  <a routerLink="/home" class="navbar_tablet-menu-button w-button">Button</a>
                   <div class="header_contact-wrapper show-tablet">
-                    <a href="#" class="contact-link w-inline-block"><img src="images/email.svg" loading="lazy" alt="" class="icon-1x1-xsmall">
+                    <a routerLink="/home" class="contact-link w-inline-block"><img src="images/email.svg" loading="lazy" alt="" class="icon-1x1-xsmall">
                       <div>info@spinningreel.co.za</div>
                     </a>
-                    <a href="#" class="contact-link w-inline-block"><img src="images/phone.svg" loading="lazy" alt="" class="icon-1x1-xsmall">
+                    <a routerLink="/home" class="contact-link w-inline-block"><img src="images/phone.svg" loading="lazy" alt="" class="icon-1x1-xsmall">
                       <div>+27 (046) 624 4281</div>
                     </a>
                   </div>
                 </nav>
-                <a href="index.html" class="navbar_logo-link w-nav-brand"><img src="images/Logo-markwhite.svg" loading="lazy" alt="" class="navbar_logo"><img src="images/Logowhite.svg" loading="lazy" alt="" class="navbar_logo"></a>
-                <a id="w-node-c0bfe2f6-aa6a-e672-5442-1cf2def242bf-def242ac" href="booking.html" class="button is-navbar-button w-button">Book Now</a>
+                <a routerLink="/home" class="navbar_logo-link w-nav-brand"><img src="images/Logo-markwhite.svg" loading="lazy" alt="" class="navbar_logo"><img src="images/Logowhite.svg" loading="lazy" alt="" class="navbar_logo"></a>
+                <a id="w-node-c0bfe2f6-aa6a-e672-5442-1cf2def242bf-def242ac" routerLink="/booking" class="button is-navbar-button w-button">Book Now</a>
                 <div class="navbar_menu-background"></div>
               </div>
             </div>
@@ -197,7 +197,7 @@ font-size: inherit;
                   </div>
                   <div class="margin-top margin-medium">
                     <div class="button-row">
-                      <a href="#" class="button-secondary w-button">Book Now</a>
+                      <a routerLink="/home" class="button-secondary w-button">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -230,7 +230,7 @@ font-size: inherit;
               <div class="splide__track w-dyn-list">
                 <div role="list" class="splide__list w-dyn-items">
                   <div role="listitem" class="splide__slide w-dyn-item">
-                    <a href="#" class="a-item-gallery_lightbox-link w-inline-block w-lightbox">
+                    <a routerLink="/home" class="a-item-gallery_lightbox-link w-inline-block w-lightbox">
                       <div class="a-item-gallery_image-wrapper"><img src="" loading="lazy" alt="" class="a-item-gallery_image"></div>
                       <script type="application/json" class="w-json">{
   "items": [],
@@ -247,36 +247,36 @@ font-size: inherit;
                 <div class="arrows w-embed"><button class="splide__arrow splide__arrow--prev"></button></div>
                 <div class="arrows w-embed"><button class="splide__arrow splide__arrow--next"></button></div>
                 <div class="splide-arrows-wrapper">
-                  <a href="#" class="splide__arrow splide__arrow--prev w-button"></a>
-                  <a href="#" class="splide__arrow splide__arrow--next w-button"></a>
+                  <a routerLink="/home" class="splide__arrow splide__arrow--prev w-button"></a>
+                  <a routerLink="/home" class="splide__arrow splide__arrow--next w-button"></a>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="a-item-section-accomodation">
+      <section class="a-item-section-accommodation">
         <div class="container-large">
           <div class="padding-vertical padding-xhuge">
             <div class="page-padding">
               <div class="margin-bottom margin-xhuge">
-                <h2>Other Accomodation</h2>
+                <h2>Other Accommodation</h2>
               </div>
             </div>
-            <div class="a-item-accomodation_component">
-              <div class="a-item-accomodation_list-wrapper w-dyn-list">
-                <div role="list" class="a-item-accomodation_list w-dyn-items">
-                  <div role="listitem" class="a-item-accomodation_item w-dyn-item">
-                    <div class="a-item-accomodation_item-wrapper">
-                      <div class="a-item-accomodation_image-wrapper"><img src="" loading="lazy" alt="" class="a-item-accomodation_image"></div>
-                      <div class="a-item-accomodation_overlay-wrapper">
-                        <div class="a-item-accomodation-description-wrapper">
+            <div class="a-item-accommodation_component">
+              <div class="a-item-accommodation_list-wrapper w-dyn-list">
+                <div role="list" class="a-item-accommodation_list w-dyn-items">
+                  <div role="listitem" class="a-item-accommodation_item w-dyn-item">
+                    <div class="a-item-accommodation_item-wrapper">
+                      <div class="a-item-accommodation_image-wrapper"><img src="" loading="lazy" alt="" class="a-item-accommodation_image"></div>
+                      <div class="a-item-accommodation_overlay-wrapper">
+                        <div class="a-item-accommodation-description-wrapper">
                           <div class="margin-bottom margin-xxsmall">
                             <h3 class="text-color-white"></h3>
                           </div>
                           <div class="text-color-white"></div>
                         </div>
-                        <a href="#" class="button-link with-icon is-alternate w-inline-block">
+                        <a routerLink="/home" class="button-link with-icon is-alternate w-inline-block">
                           <div>view</div><img src="images/Chevron-Right-White.svg" loading="lazy" alt="" class="icon-xxsmall">
                         </a>
                       </div>
@@ -299,7 +299,7 @@ font-size: inherit;
                 <div class="w-layout-grid footer_top-wrapper">
                   <div class="footer_left-wrapper">
                     <div class="margin-bottom margin-medium">
-                      <a href="index.html" class="footer_logo-link w-nav-brand"><img src="images/Logo.svg" loading="lazy" alt="Spinning Reel logo"></a>
+                      <a routerLink="/home" class="footer_logo-link w-nav-brand"><img src="images/Logo.svg" loading="lazy" alt="Spinning Reel logo"></a>
                     </div>
                     <div class="margin-bottom margin-medium">
                       <div class="footer_details-wrapper">
@@ -319,12 +319,12 @@ font-size: inherit;
                       </div>
                     </div>
                     <div class="w-layout-grid footer_social-list">
-                      <a href="#" class="footer_social-link w-inline-block">
+                      <a routerLink="/home" class="footer_social-link w-inline-block">
                         <div class="social-icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M16.5 6H13.5C12.9477 6 12.5 6.44772 12.5 7V10H16.5C16.6137 9.99748 16.7216 10.0504 16.7892 10.1419C16.8568 10.2334 16.8758 10.352 16.84 10.46L16.1 12.66C16.0318 12.8619 15.8431 12.9984 15.63 13H12.5V20.5C12.5 20.7761 12.2761 21 12 21H9.5C9.22386 21 9 20.7761 9 20.5V13H7.5C7.22386 13 7 12.7761 7 12.5V10.5C7 10.2239 7.22386 10 7.5 10H9V7C9 4.79086 10.7909 3 13 3H16.5C16.7761 3 17 3.22386 17 3.5V5.5C17 5.77614 16.7761 6 16.5 6Z" fill="CurrentColor"></path>
                           </svg></div>
                       </a>
-                      <a href="#" class="footer_social-link w-inline-block">
+                      <a routerLink="/home" class="footer_social-link w-inline-block">
                         <div class="social-icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M16 3H8C5.23858 3 3 5.23858 3 8V16C3 18.7614 5.23858 21 8 21H16C18.7614 21 21 18.7614 21 16V8C21 5.23858 18.7614 3 16 3ZM19.25 16C19.2445 17.7926 17.7926 19.2445 16 19.25H8C6.20735 19.2445 4.75549 17.7926 4.75 16V8C4.75549 6.20735 6.20735 4.75549 8 4.75H16C17.7926 4.75549 19.2445 6.20735 19.25 8V16ZM16.75 8.25C17.3023 8.25 17.75 7.80228 17.75 7.25C17.75 6.69772 17.3023 6.25 16.75 6.25C16.1977 6.25 15.75 6.69772 15.75 7.25C15.75 7.80228 16.1977 8.25 16.75 8.25ZM12 7.5C9.51472 7.5 7.5 9.51472 7.5 12C7.5 14.4853 9.51472 16.5 12 16.5C14.4853 16.5 16.5 14.4853 16.5 12C16.5027 10.8057 16.0294 9.65957 15.1849 8.81508C14.3404 7.97059 13.1943 7.49734 12 7.5ZM9.25 12C9.25 13.5188 10.4812 14.75 12 14.75C13.5188 14.75 14.75 13.5188 14.75 12C14.75 10.4812 13.5188 9.25 12 9.25C10.4812 9.25 9.25 10.4812 9.25 12Z" fill="CurrentColor"></path>
                           </svg></div>
@@ -333,9 +333,9 @@ font-size: inherit;
                   </div>
                   <div class="w-layout-grid footer_menu-wrapper">
                     <div class="footer_link-list">
-                      <a href="accommodation.html" class="footer_link">Accommodation</a>
-                      <a href="booking.html" class="footer_link">Booking</a>
-                      <a href="contact.html" class="footer_link">Contact</a>
+                      <a routerLink="/accommodation" class="footer_link">Accommodation</a>
+                      <a routerLink="/booking" class="footer_link">Booking</a>
+                      <a routerLink="/contact" class="footer_link">Contact</a>
                     </div>
                   </div>
                 </div>
