--- a/spinning-reel/src/index.html
+++ b/spinning-reel/src/index.html
@@ -39,20 +39,10 @@
   <link href="css/spinning-reel.css"
         rel="stylesheet"
         type="text/css">
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">
-    ! function (o, c) {
-      var n = c.documentElement,
-        t = " w-mod-";
-      n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className +=
-        t + "touch")
-    }(window, document);
-
-  </script>
-  <link href="images/favicon.png"
+  <link href="assets/img/favicon.png"
         rel="shortcut icon"
         type="image/x-icon">
-  <link href="images/webclip.png"
+  <link href="assets/img/webclip.png"
         rel="apple-touch-icon"><!--  Please keep this css code to improve the font quality -->
   <style>
     * {
@@ -61,26 +51,16 @@
     }
 
   </style>
-  <!--  You can remove this  -->
-  <meta name="facebook-domain-verification"
-        content="mlk59ybu44651lzcbhhxjfl8vfae8q">
 </head>
 
 <body>
   <app-root></app-root>
 </body>
 
-
 <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62e3fdb8dc5ed3467ecf3726"
         type="text/javascript"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-<script src="assets/js/spinning-reel.js"
-        type="text/javascript"></script>
-<!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-
+<!-- <script src="assets/js/spinning-reel.js"
+        type="text/javascript"></script> -->
 </html>
-
-<!-- <!DOCTYPE html> Last Published: Thu Oct 20 2022 16:58:51 GMT+0000 (Coordinated Universal Time) 
-<html data-wf-page="62e3fdb8dc5ed36267cf3725"
-      data-wf-site="62e3fdb8dc5ed3467ecf3726"> -->
